locale was updated

--- a/src/main/resources/languages/locale.properties
+++ b/src/main/resources/languages/locale.properties
@@ -1,1 +1,20 @@
 procedures=Procedures
+startup.clinic=StartUP CLINIC
+doctors=Doctors
+contacts=contacts
+about.us=About us
+registration=Registration
+sign.in=SIGN IN
+home=Home
+personal.area=PERSONAL AREA
+logout=Logout
+authorization.is.successfully=Authorization is successfully!
+you.can.make.appointments.now=You can make appointments now!
+you.logout.successfully=You logout successfully!
+
+tooth.filling=Tooth filling
+vision.correction=Vision correction
+surgery=Surgery
+psycho.help=Psycho help
+alcoholism.treatment=Alcoholism treatment
+exorcism=Exorcism
