--- a/src/main/resources/languages/locale_en_US.properties
+++ b/src/main/resources/languages/locale_en_US.properties
@@ -9,12 +9,27 @@ home=Home
 personal.area=PERSONAL AREA
 logout=Logout
 authorization.is.successfully=Authorization is successfully!
-you.can.make.appointments.now= You can make appointments now!
+you.can.make.appointments.now=You can make appointments now!
 you.logout.successfully=You logout successfully!
-
-tooth.filling=Tooth filling
-vision.correction=Vision correction
-surgery=Surgery
-psycho.help=Psycho help
-alcoholism.treatment=Alcoholism treatment
-exorcism=Exorcism
+the.procedure.was.added=The procedure was added!
+the.procedure.was.deleted=The procedure was deleted!
+the.procedure.was.updated=The Procedure was updated!
+the.doctor.page.and.his.schedule.were.deleted=The doctor page and his schedule were deleted!
+also.role.was.changed.to.user=Also ROLE was changed to USER!
+description=Description
+duration=Duration
+price=Price
+doctor.information.was.updated=Doctor information was updated!
+schedule.was.updated=Schedule was updated!
+the.doctor.was.added=The doctor was added!
+change.doctor.information=Change doctor information
+change.doctor.schedule=Change doctor schedule
+delete.doctor.with.his.schedule=Delete doctor with his schedule!
+qualification=Qualification
+rank=Rank
+email=Email
+phone.number=Phone number
+schedule.of.doctor=Schedule of doctor
+start.time=Start time
+end.time=End time
+days=Days
