--- a/src/main/resources/languages/locale_zh_CN.properties
+++ b/src/main/resources/languages/locale_zh_CN.properties
@@ -11,10 +11,25 @@ logout=\u767B\u51FA
 authorization.is.successfully=\u6388\u6B0A\u6210\u529F!
 you.can.make.appointments.now=\u4F60\u73FE\u5728\u53EF\u4EE5\u9810\u7D04\u4E86!
 you.logout.successfully=\u60A8\u8A3B\u92B7\u6210\u529F\uFF01
-
-tooth.filling=\u88DC\u7259
-vision.correction=\u8996\u529B\u77EF\u6B63
-surgery=\u624B\u8853
-psycho.help=\u5FC3\u7406\u5E6B\u52A9
-alcoholism.treatment=\u9152\u7CBE\u4E2D\u6BD2\u6CBB\u7642
-exorcism=\u9A45\u9B54
+the.procedure.was.added=\u7A0B\u5E8F\u5DF2\u6DFB\u52A0\uFF01
+the.procedure.was.deleted=\u7A0B\u5E8F\u88AB\u522A\u9664\uFF01
+the.procedure.was.updated=\u7A0B\u5E8F\u5DF2\u66F4\u65B0\uFF01
+the.doctor.page.and.his.schedule.were.deleted=\u91AB\u751F\u9801\u9762\u548C\u4ED6\u7684\u65E5\u7A0B\u88AB\u522A\u9664\u4E86\uFF01
+also.role.was.changed.to.user=\u89D2\u8272\u4E5F\u66F4\u6539\u70BA\u7528\u6236\uFF01
+description=\u63CF\u8FF0
+duration=\u671F\u9593
+price=\u50F9\u683C
+doctor.information.was.updated=\u91AB\u751F\u4FE1\u606F\u66F4\u65B0\u4E86\uFF01
+schedule.was.updated=\u65E5\u7A0B\u66F4\u65B0\u4E86\uFF01
+the.doctor.was.added=\u52A0\u4E86\u91AB\u751F\uFF01
+change.doctor.information=\u66F4\u6539\u91AB\u751F\u4FE1\u606F
+change.doctor.schedule=\u66F4\u6539\u91AB\u751F\u6642\u9593\u8868
+delete.doctor.with.his.schedule=\u7528\u4ED6\u7684\u65E5\u7A0B\u8868\u522A\u9664\u91AB\u751F\uFF01
+qualification=\u8CC7\u8CEA
+rank=\u79E9
+email=\u96FB\u5B50\u90F5\u4EF6
+phone.number=\u96FB\u8A71\u865F\u78BC
+schedule.of.doctor=\u91AB\u751F\u6642\u9593\u8868
+start.time=\u958B\u59CB\u6642\u9593
+end.time=\u6642\u9593\u7D50\u675F
+days=\u5929
