--- a/src/main/resources/languages/locale.properties
+++ b/src/main/resources/languages/locale.properties
@@ -28,10 +28,46 @@ delete.doctor.with.his.schedule=Delete doctor with his schedule!
 qualification=Qualification
 rank=Rank
 email=Email
+password=Password
 phone.number=Phone number
 schedule.of.doctor=Schedule of doctor
 start.time=Start time
 end.time=End time
 days=Days
+authorization=Authorization
+registration.is.successfully=Registration is successfully!
+log.in.your.account=Log in your account.
+invalid.data=Invalid data!
+try.again=Try again.
+name=Name
+surname=Surname
+register=Register
+appointment.list=Appointment list
+the.appointment.was.updated=The appointment was changed!
+the.appointment.was.added=The appointment was added!
+the.appointment.was.deleted=The appointment was deleted!
+no.appointment=No appointments!
+date=Date
+client=Client
+status=Status
+change=Change
+delete=Delete
+procedure=Procedure
+doctor=Doctor
+id=Id
+appointment=Appointment
+user=User
+photo.don't.choose.anything.if.you.not.needed=Photo (don't choose anything if you not needed)
+schedule=schedule
+minutes=minutes
+role=role
+make=Make
+see.more.info=See more info
+choose.doctor.please=Choose doctor please!
+create=Create
+add.new.doctor=Add new doctor
+picture=picture
+add=Add
+are.you.sure.that.you.want.to.delete.appointment.with.id=Are you sure that you want to delete appointment with id
 
 
