--- a/src/main/resources/languages/locale_zh_CN.properties
+++ b/src/main/resources/languages/locale_zh_CN.properties
@@ -28,8 +28,48 @@ delete.doctor.with.his.schedule=\u7528\u4ED6\u7684\u65E5\u7A0B\u8868\u522A\u9664
 qualification=\u8CC7\u8CEA
 rank=\u79E9
 email=\u96FB\u5B50\u90F5\u4EF6
+password=\u5BC6\u78BC
 phone.number=\u96FB\u8A71\u865F\u78BC
 schedule.of.doctor=\u91AB\u751F\u6642\u9593\u8868
 start.time=\u958B\u59CB\u6642\u9593
 end.time=\u6642\u9593\u7D50\u675F
 days=\u5929
+authorization=\u6388\u6B0A
+registration.is.successfully=\u8A3B\u518A\u6210\u529F\uFF01
+log.in.your.account=\u767B\u9304\u60A8\u7684\u5E33\u6236\u3002
+invalid.data=\u7121\u6548\u6578\u64DA\uFF01
+try.again=\u518D\u8A66\u4E00\u6B21\u3002
+name=\u540D\u7A31
+surname=\u59D3
+register=\u767B\u8A18
+appointment.list=\u9810\u7D04\u6E05\u55AE
+the.appointment.was.updated=\u7D04\u6703\u8B8A\u4E86\uFF01
+the.appointment.was.added=\u9810\u7D04\u5DF2\u6DFB\u52A0\uFF01
+the.appointment.was.deleted=T\u7D04\u6703\u88AB\u522A\u9664\u4E86\uFF01
+no.appointment=\u6C92\u6709\u7D04\u6703\uFF01
+date=\u65E5\u671F
+client=\u5BA2\u6236
+status=\u5730\u4F4D
+change=\u6539\u8B8A
+delete=\u522A\u9664
+procedure=\u7A0B\u5E8F
+doctor=\u91AB\u751F
+id=\u6A19\u8B58\u7B26
+appointment=\u7D04\u5B9A
+user=\u7528\u6236
+photo.don't.choose.anything.if.you.not.needed=\u7167\u7247\uFF08\u4E0D\u9700\u8981\u7684\u4E0D\u8981\u9078\uFF09
+schedule=\u65E5\u7A0B
+minutes=\u5206\u9418
+role=\u89D2\u8272
+make=\u88FD\u4F5C
+see.more.info=\u67E5\u770B\u66F4\u591A\u4FE1\u606F
+choose.doctor.please=\u8ACB\u9078\u64C7\u91AB\u751F\uFF01
+create=\u5275\u5EFA
+add.new.doctor=\u6DFB\u52A0\u65B0\u91AB\u751F
+picture=\u5716\u7247
+add=\u6DFB\u52A0
+are.you.sure.that.you.want.to.delete.appointment.with.id=\u60A8\u78BA\u5B9A\u8981\u522A\u9664\u5E36\u6709 id \u7684\u7D04\u6703\u55CE
+
+
+
+
