--- a/src/main/resources/languages/locale.properties
+++ b/src/main/resources/languages/locale.properties
@@ -68,6 +68,20 @@ create=Create
 add.new.doctor=Add new doctor
 picture=picture
 add=Add
-are.you.sure.that.you.want.to.delete.appointment.with.id=Are you sure that you want to delete appointment with id
-
-
+are.you.sure.that.you.want.to.delete=Are you sure that you want to delete
+and=and 
+his=his
+something.went.wrong=Something went wrong
+try.to.find.out.another.clinic=Try to find out another clinic.
+maybe.it.will.be.better.for.you.health=Maybe it will be better for you health.
+profile=Profile
+your.information.was.updated=Your information was updated
+your.personal.information=Your personal information
+welcome.in.your.personal.area.with=WELCOME in your PERSONAL AREA with
+rights=rights
+my=My
+users=Users
+appointments=Appointments
+information=information
+the.user.was.updated=The user was updated
+list=list
