--- a/src/main/resources/languages/locale_zh_CN.properties
+++ b/src/main/resources/languages/locale_zh_CN.properties
@@ -68,8 +68,21 @@ create=\u5275\u5EFA
 add.new.doctor=\u6DFB\u52A0\u65B0\u91AB\u751F
 picture=\u5716\u7247
 add=\u6DFB\u52A0
-are.you.sure.that.you.want.to.delete.appointment.with.id=\u60A8\u78BA\u5B9A\u8981\u522A\u9664\u5E36\u6709 id \u7684\u7D04\u6703\u55CE
-
-
-
-
+are.you.sure.that.you.want.to.delete=\u60A8\u78BA\u5B9A\u8981\u522A\u9664\u5E36\u6709 id \u7684\u7D04\u6703\u55CE
+and=\u548C
+his=\u4ED6\u7684
+error=\u932F\u8AA4
+something.went.wrong=\u51FA\u554F\u984C\u4E86
+try.to.find.out.another.clinic=\u5617\u8A66\u5C0B\u627E\u53E6\u4E00\u5BB6\u8A3A\u6240\u3002
+maybe.it.will.be.better.for.you.health=\u4E5F\u8A31\u9019\u5C0D\u4F60\u7684\u5065\u5EB7\u6703\u66F4\u597D\u3002
+profile=\u8F2A\u5ED3
+your.information.was.updated=\u60A8\u7684\u4FE1\u606F\u5DF2\u66F4\u65B0
+your.personal.information=\u4F60\u7684\u500B\u4EBA\u4FE1\u606F
+welcome.in.your.personal.area.with=\u6B61\u8FCE\u4F86\u5230\u60A8\u7684\u500B\u4EBA\u5340\u57DF
+rights=\u6B0A\u5229
+my=\u6211\u7684
+users=\u7528\u6236
+appointments=\u7D04\u6703
+information=\u4FE1\u606F
+the.user.was.updated=\u7528\u6236\u5DF2\u66F4\u65B0
+list=\u5217\u8868
