--- a/src/main/resources/languages/locale.properties
+++ b/src/main/resources/languages/locale.properties
@@ -1,7 +1,7 @@
 procedures=Procedures
 startup.clinic=StartUP CLINIC
 doctors=Doctors
-contacts=contacts
+contacts=Contacts
 about.us=About us
 registration=Registration
 sign.in=SIGN IN
