--- a/src/main/resources/languages/locale.properties
+++ b/src/main/resources/languages/locale.properties
@@ -71,6 +71,7 @@ add=Add
 are.you.sure.that.you.want.to.delete=Are you sure that you want to delete
 and=and 
 his=his
+error=ERROR
 something.went.wrong=Something went wrong
 try.to.find.out.another.clinic=Try to find out another clinic.
 maybe.it.will.be.better.for.you.health=Maybe it will be better for you health.
