"choose date and approximate time" was added

--- a/src/main/resources/languages/locale.properties
+++ b/src/main/resources/languages/locale.properties
@@ -86,3 +86,4 @@ appointments=Appointments
 information=information
 the.user.was.updated=The user was updated
 list=list
+choose.date.time=Please, choose  date and approximate time convenient for you, and then the employee will contact you for clarification.
