--- a/src/main/resources/languages/locale_zh_CN.properties
+++ b/src/main/resources/languages/locale_zh_CN.properties
@@ -86,3 +86,4 @@ appointments=\u7D04\u6703
 information=\u4FE1\u606F
 the.user.was.updated=\u7528\u6236\u5DF2\u66F4\u65B0
 list=\u5217\u8868
+choose.date.time=\u8ACB\u9078\u64C7\u60A8\u65B9\u4FBF\u7684\u65E5\u671F\u548C\u5927\u81F4\u6642\u9593\uFF0C\u7136\u5F8C\u5DE5\u4F5C\u4EBA\u54E1\u6703\u806F\u7E6B\u60A8\u9032\u884C\u8AAA\u660E\u3002
